--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Node.js library to hydrate static React sites",
   "main": "src/index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint-staged": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,17 @@
   "bugs": {
     "url": "https://github.com/jondarrer/react-static-site-hydrater/issues"
   },
-  "homepage": "https://github.com/jondarrer/react-static-site-hydrater#readme"
+  "homepage": "https://github.com/jondarrer/react-static-site-hydrater#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@types/jest": "^25.1.4",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^25.2.4",
+    "eslint": "^6.8.0",
+    "husky": "^4.2.3",
+    "jest": "^25.2.4",
+    "lint-staged": "^10.0.10",
+    "prettier": "2.0.2"
+  }
 }
