14 :wrench: Ensure deployments to npm only on version change
https://trello.com/c/sIBu06WI/14-integrate-with-travis-ci

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
   "editor.tabSize": 2,
   "cSpell.words": [
     "Darrer",
-    "hydrater"
+    "hydrater",
+    "jondarrer"
   ],
   "workbench.colorCustomizations": {
     "activityBar.background": "#2f7c47",
