--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "jest": "^25.2.4",
     "lint-staged": "^10.0.10",
     "prettier": "2.0.2"
+  },
+  "peerDependencies": {
+    "webpack": "^4.42.1"
   }
 }
