--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier": "2.0.2"
   },
   "peerDependencies": {
-    "webpack": "^4.42.1"
+    "webpack": "^4.42.1",
+    "react-dom": "^16.0.0"
   }
 }
