--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,12 @@
     "node": true,
     "jest": true
   },
+  "parserOptions": {
+    "ecmaVersion": 11,
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "semi": "error"
   }
