--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
     "@types/jest": "^25.1.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.2.4",
@@ -35,7 +36,11 @@
     "prettier": "2.0.2"
   },
   "peerDependencies": {
-    "webpack": "^4.42.1",
-    "react-dom": "^16.0.0"
-  }
+    "prop-types": "^15.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^5.0.0",
+    "webpack": "^4.42.1"
+  },
+  "dependencies": {}
 }
