--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "name": "react-static-site-hydrater",
   "version": "1.1.0",
   "description": "A Node.js library to hydrate static React sites",
-  "main": "src/index.js",
+  "main": "dist/bundle.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "build": "webpack",
     "test": "jest",
-    "lint-staged": "lint-staged"
+    "lint-staged": "lint-staged",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -29,18 +34,24 @@
     "@types/jest": "^25.1.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.2.4",
+    "babel-loader": "^8.1.0",
     "eslint": "^6.8.0",
     "husky": "^4.2.3",
     "jest": "^25.2.4",
     "lint-staged": "^10.0.10",
-    "prettier": "2.0.2"
+    "prettier": "2.0.2",
+    "prop-types": "^15.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router-dom": "^5.0.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11"
   },
   "peerDependencies": {
     "prop-types": "^15.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^5.0.0",
-    "webpack": "^4.42.1"
+    "react-router-dom": "^5.0.0"
   },
   "dependencies": {}
 }
