16 :bug: Fix packaging of library
https://trello.com/c/MXRqNNwQ/16-render-routes

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "webpack",
     "test": "jest",
     "lint-staged": "lint-staged",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
