16 :bug: Provide componentPath option
https://trello.com/c/MXRqNNwQ/16-render-routes

--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "build": "webpack"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2"
+  },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.0.3",
     "prettier": "2.0.2",
     "prop-types": "^15.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-router-dom": "^5.0.0",
     "webpack": "4.42.1",
     "webpack-cli": "3.3.11"
   },
