--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/register": "^7.9.0",
     "babel-loader": "^8.1.0",
     "html-webpack-plugin": "^4.0.3",
     "prettier": "2.0.2",
