--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/preset-env": "^7.9.0",
     "@types/jest": "^25.1.4",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.2.4",
