--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["@babel/preset-env"],
-  "plugins": ["@babel/plugin-transform-react-jsx"]
+  "plugins": ["@babel/transform-runtime", "@babel/plugin-transform-react-jsx"]
 }
