--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.9.0",
     "@babel/plugin-transform-react-jsx": "^7.9.4",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@types/jest": "^25.1.4",
     "babel-eslint": "^10.1.0",
@@ -44,15 +45,21 @@
     "prop-types": "^15.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-helmet-async": "^1.0.4",
     "react-router-dom": "^5.0.0",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
   "peerDependencies": {
+    "html-webpack-plugin": "^4.0.0",
     "prop-types": "^15.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-helmet-async": "^1.0.0",
     "react-router-dom": "^5.0.0"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/runtime": "^7.9.2",
+    "node-html-parser": "^1.2.14"
+  }
 }
