28 :heavy_plus_sign: Add Apollo & GQL peer dependencies
https://trello.com/c/ezTmX3kR/28-refactor-to-make-rending-different-parts-of-an-application-pluggable

--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "webpack-cli": "^3.3.11"
   },
   "peerDependencies": {
+    "@apollo/client": "^3.0.0",
+    "graphql": "^15.0.0",
     "html-webpack-plugin": "^4.0.0",
     "prop-types": "^15.0.0",
     "react": "^16.0.0",
