28 :green_heart: Add peer deps prior to running tests in Travis
https://trello.com/c/ezTmX3kR/28-refactor-to-make-rending-different-parts-of-an-application-pluggable

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - 12.14.1
+install:
+  - npm ci
+  - HUSKY_SKIP_INSTALL=1 npm i --no-save react-dom/server react-router-dom react-helmet-async @apollo/client
 deploy:
   provider: npm
   skip_cleanup: true
