28 :wrench: :green_heart: Fix issue with build as part of install
https://docs.npmjs.com/misc/scripts#prepublish-and-prepare

https://trello.com/c/ezTmX3kR/28-refactor-to-make-rending-different-parts-of-an-application-pluggable

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "webpack",
     "test": "jest",
     "lint-staged": "lint-staged",
-    "prepare": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
