--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "webpack",
     "test": "jest",
     "lint-staged": "lint-staged",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "postinstall": "husky install"
   },
   "repository": {
     "type": "git",
@@ -28,40 +29,40 @@
   },
   "homepage": "https://github.com/jondarrer/react-static-site-hydrater#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-transform-react-jsx": "^7.9.4",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@types/jest": "^25.1.4",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-react-jsx": "^7.12.17",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@types/jest": "^26.0.20",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.2.4",
-    "babel-loader": "^8.1.0",
-    "eslint": "^6.8.0",
-    "husky": "^4.2.3",
-    "jest": "^25.2.4",
-    "lint-staged": "^10.0.10",
-    "prettier": "2.0.2",
-    "prop-types": "^15.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-helmet-async": "^1.0.4",
-    "react-router-dom": "^5.0.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "eslint": "^7.22.0",
+    "husky": "^5.1.3",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "2.2.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet-async": "^1.0.9",
+    "react-router-dom": "^5.2.0",
+    "webpack": "^5.26.2",
+    "webpack-cli": "^4.5.0"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.0.0",
-    "graphql": "^15.0.0",
-    "html-webpack-plugin": "^4.0.0",
-    "prop-types": "^15.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-helmet-async": "^1.0.0",
-    "react-router-dom": "^5.0.0"
+    "@apollo/client": "^3.3.12",
+    "graphql": "^15.5.0",
+    "html-webpack-plugin": "^5.3.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet-async": "^1.0.9",
+    "react-router-dom": "^5.2.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.9.2",
-    "node-html-parser": "^1.2.14"
+    "@babel/runtime": "^7.13.10",
+    "node-html-parser": "^3.1.0"
   }
 }
