--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "lint-staged": "lint-staged",
     "prepublishOnly": "npm run build",
-    "postinstall": "husky install"
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
