--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
   "cSpell.words": [
     "Darrer",
     "hydrater",
-    "jondarrer"
+    "jondarrer",
+    "jsxify"
   ],
   "workbench.colorCustomizations": {
     "activityBar.background": "#2f7c47",
