--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "react-static-site-hydrater",
   "version": "4.0.10",
   "description": "A Node.js library to hydrate static React sites",
-  "main": "dist/bundle.js",
+  "main": "src/index.js",
   "files": [
-    "dist"
+    "src"
   ],
   "scripts": {
     "build": "webpack",
@@ -29,15 +29,7 @@
   },
   "homepage": "https://github.com/jondarrer/react-static-site-hydrater#readme",
   "devDependencies": {
-    "@babel/cli": "7.13.10",
-    "@babel/core": "7.13.10",
-    "@babel/plugin-transform-react-jsx": "7.12.17",
-    "@babel/plugin-transform-runtime": "7.13.10",
-    "@babel/preset-env": "7.13.10",
     "@types/jest": "26.0.20",
-    "babel-eslint": "10.1.0",
-    "babel-jest": "26.6.3",
-    "babel-loader": "8.2.2",
     "eslint": "7.22.0",
     "husky": "5.1.3",
     "jest": "26.6.3",
@@ -62,7 +54,6 @@
     "react-router-dom": "^5.2.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.13.10",
     "node-html-parser": "^3.1.0"
   }
 }
