--- a/examples/with-apollo/package.json
+++ b/examples/with-apollo/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-static-site-hydrater-example-with-helmet",
+  "name": "react-static-site-hydrater-example-with-apollo",
   "version": "1.0.0",
-  "description": "An example project with react-helmet-async for the react-static-site-hydrater webpack plugin",
+  "description": "An example project with react-apollo for the react-static-site-hydrater webpack plugin",
   "main": "./src/index.js",
   "scripts": {
     "build": "webpack"
