--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "src"
   ],
   "scripts": {
-    "build": "webpack",
     "test": "jest",
     "lint-staged": "lint-staged",
-    "prepublishOnly": "npm run build",
     "prepare": "husky install"
   },
   "repository": {
@@ -39,9 +37,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet-async": "1.0.9",
-    "react-router-dom": "5.2.0",
-    "webpack": "5.26.2",
-    "webpack-cli": "4.5.0"
+    "react-router-dom": "5.2.0"
   },
   "peerDependencies": {
     "@apollo/client": "^3.3.12",
