--- a/package.json
+++ b/package.json
@@ -32,22 +32,17 @@
     "husky": "5.1.3",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
-    "prettier": "2.2.1",
-    "prop-types": "15.7.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-helmet-async": "1.0.9",
-    "react-router-dom": "5.2.0"
+    "prettier": "2.2.1"
   },
   "peerDependencies": {
-    "@apollo/client": "^3.3.12",
-    "graphql": "^15.5.0",
-    "html-webpack-plugin": "^5.3.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-helmet-async": "^1.0.9",
-    "react-router-dom": "^5.2.0"
+    "@apollo/client": "^3.0.0",
+    "graphql": "^15.0.0",
+    "html-webpack-plugin": "^5.0.0",
+    "prop-types": "^15.0.0",
+    "react": ">16.0.0",
+    "react-dom": ">16.0.0",
+    "react-helmet-async": "^1.0.0",
+    "react-router-dom": "^5.0.0"
   },
   "dependencies": {
     "node-html-parser": "^3.1.0"
