--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   "devDependencies": {
     "@types/jest": "26.0.20",
     "eslint": "7.22.0",
+    "eval": "^0.1.6",
     "husky": "5.1.3",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
+    "memfs": "^3.2.0",
     "prettier": "2.2.1"
   },
   "peerDependencies": {
